--- a/app/views/shared/_track_card.html.erb
+++ b/app/views/shared/_track_card.html.erb
@@ -1,25 +1,25 @@
-<div class="container">
+<div class="container" id="<%=locals[:track].id%>">
   <div class="row justify-content-center">
     <div class="col-12 col-lg-6">
-    <div class="card-product">
-      <img src="https://images.unsplash.com/photo-1493225457124-a3eb161ffa5f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80" />
-      <div class="card-product-infos">
-        <h2><%= locals[:track].name %></h2>
-        <% locals[:track].artists.each do |artist| %>
-          <h2><%= artist.name  %></h2>
-        <% end %>
-        <% unless locals[:likes].nil? %>
-          <h2>Liked by <%= locals[:likes]  %> users</h2>
-        <% end %>
-        <% unless locals[:event].nil? %>
-          <% unless TracksUser.find_by(track: locals[:track], user: current_user, event: locals[:event]).nil? %>
-            <%= link_to "", star_track_path(track: locals[:track], event: locals[:event]), class: "fas fa-star", method: :delete  %>
-          <% else %>
-            <%= link_to "", star_track_path(track: locals[:track], event: locals[:event]), class: "fas fa-star non-color-star", method: :post  %>
+      <div class="card-product">
+        <img src="https://images.unsplash.com/photo-1493225457124-a3eb161ffa5f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80" />
+        <div class="card-product-infos">
+          <h2><%= locals[:track].name %></h2>
+          <% locals[:track].artists.each do |artist| %>
+            <h2><%= artist.name  %></h2>
           <% end %>
-        <% end %>
+          <% unless locals[:likes].nil? %>
+            <h2>Liked by <%= locals[:likes] %> users</h2>
+          <% end %>
+          <% unless locals[:event].nil? %>
+            <% unless TracksUser.find_by(track: locals[:track], user: current_user, event: locals[:event]).nil? %>
+              <%= link_to "", star_track_path(track: locals[:track], event: locals[:event]), class: "fas fa-star", :remote => true, method: :delete  %>
+            <% else %>
+              <%= link_to "", star_track_path(track: locals[:track], event: locals[:event]), class: "fas fa-star non-color-star", :remote => true, method: :post  %>
+            <% end %>
+          <% end %>
+        </div>
       </div>
     </div>
   </div>
-</div>
 </div>
