--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,7 +1,7 @@
 
   <div class="cta">
-    <h2>Check the events around you.</h2>
-    <p>Connect with people and share your music</p>
+    <h2>See the events around you to check in.</h2>
+    <p>Connect with people at the event and share your music</p>
   </div>
 
   <div class="container">
