--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,18 +1,20 @@
 .card-product {
-  height: 200px;
-  width: 100%;
+  // height: 200px;
+  // width: 100%;
   background: black;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
+  justify-content: space-between;
   align-items: center;
-  margin-top: 50px;
+  margin-top: 20px;
+  margin-down: 50px;
   // overflow: hidden;
 }
 
 
 .card-product img {
-  height: 100%;
-  width: 200px;
+  height: 160px;
+  width: 160px;
   object-fit: cover;
   transition: transform .5s, filter 0.5s ease-in-out;
   filter: grayscale(40%);
@@ -20,7 +22,7 @@
 
 .card-product:hover img {
 filter: grayscale(0);
-transform: scale(1.1);
+transform: scale(1.05);
 }
 
 .card-product h2 {
@@ -40,36 +42,39 @@ transform: scale(1.1);
   margin-top: 8px;
 }
 
-// .card-product .confirm-button {
-//   // position: absolute;
-//   // right: 0px;
-//   // top: -20px;
-//   // width: 80px;
-//   padding: 8px 24px;
-//   // background-color: #734B6D;
-//   border: none;
-//   color: white;
-//   height: 40px;
-//   text-align: center;
-//   text-decoration: none;
-//   // display: inline-block;
-//   font-size: 16px;
-//   border-radius: 5%;
-//   transition-duration: 0.4s;
-//   text-decoration: none;
-//   overflow: hidden;
-//   cursor: pointer;
+.card-product .confirm-button {
+  position: absolute;
+  left: 32px;
+  bottom: 6px;
+  width: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #734B6D;
+  border: none;
+  color: white;
+  height: 40px;
+  text-align: center;
+  text-decoration: none;
+  // display: inline-block;
+  font-size: 16px;
+  border-radius: 5%;
+  transition-duration: 0.4s;
+  text-decoration: none;
+  overflow: hidden;
+  cursor: pointer;
 
-// }
+}
 
 .card-product .card-product-infos {
   padding: 16px;
+  flex-grow: 1;
 
 }
 
 .card-product .card-product-infos p {
   color: $white;
-  font-size: 16px;
+  font-size: 12px;
   line-height: 1.4;
   opacity: .8;
   margin-bottom: 5px;
@@ -87,7 +92,7 @@ transform: scale(1.1);
 }
 
 .card-product .card-product-infos h1 {
-  font-size: 18px;
+  font-size: 14px;
   font-weight: bold;
   margin: 0;
   color: $white;
