--- a/app/assets/stylesheets/components/_cta.scss
+++ b/app/assets/stylesheets/components/_cta.scss
@@ -1,5 +1,5 @@
 p {
-  font-size: 14px;
+  font-size: 16px;
   margin-left: 25px;
   margin-right: 20px;
   margin-bottom: 20px;
@@ -15,6 +15,7 @@ h2 {
   margin-top: 20px;
   margin-left: 20px;
   margin-right: 20px;
+  margin-bottom: 20px;
   color: #E4C1F9;
 
 }
