--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,9 +3,9 @@
   <%= video_tag "concert.mp4", autoplay: :autoplay, loop: :loop, mute: :mute, class: 'home_video' %>
   <div class="container">
     <h1><strong>PLUG IN</strong></h1>
-    <p>Fresh, niche, curated  </p>
-    <p>music list at your fingertips!</p>
-    <%= link_to "Get started", events_path, class: "btn btn-gradient", id: "event-index" %>
+    <p>Take a peek at others' music while enjoying a concert</p>
+    <p>Create your next playlist in a heartbeat!</p>
+    <%= link_to "See events", events_path, class: "btn btn-gradient", id: "event-index" %>
   </div>
 </div>
 
