--- a/app/views/shared/_track_card.html.erb
+++ b/app/views/shared/_track_card.html.erb
@@ -8,6 +8,15 @@
       <%= image_tag "plug_logo.png" %>
       <% end %>
       <div class="card-product-infos">
+        <div class="star-card">
+         <% unless locals[:event].nil? %>
+          <% unless TracksUser.find_by(track: locals[:track], user: current_user, event: locals[:event]).nil? %>
+            <%= link_to "", star_track_path(track: locals[:track], event: locals[:event]), class: "fas fa-star", :remote => true, method: :delete  %>
+          <% else %>
+            <%= link_to "", star_track_path(track: locals[:track], event: locals[:event]), class: "fas fa-star non-color-star", :remote => true, method: :post  %>
+          <% end %>
+        <% end %>
+      </div>
         <% locals[:track].artists.each do |artist| %>
           <h2><%= artist.name  %></h2>
         <% end %>
@@ -15,16 +24,7 @@
         <% unless locals[:likes].nil? %>
           <p><em>Liked by <%= locals[:likes]  %> user(s)</em></p>
         <% end %>
-        <% unless locals[:event].nil? %>
-          <% unless TracksUser.find_by(track: locals[:track], user: current_user, event: locals[:event]).nil? %>
-            <%= link_to "", star_track_path(track: locals[:track], event: locals[:event]), class: "fas fa-star", :remote => true, method: :delete  %>
-          <% else %>
-            <%= link_to "", star_track_path(track: locals[:track], event: locals[:event]), class: "fas fa-star non-color-star", :remote => true, method: :post  %>
-          <% end %>
-          <% unless locals[:likes].nil? %>
-            <h2>Liked by <%= locals[:likes] %> users</h2>
-          <% end %>
-        <% end %>
+
         </div>
       </div>
     </div>
