--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
     <h1><strong>PLUG IN</strong></h1>
     <p>Take a peek at others' music while enjoying a concert</p>
     <p>Create your next playlist in a heartbeat!</p>
-    <%= link_to "See events", events_path, class: "btn btn-gradient", id: "event-index" %>
+    <%= link_to "See events", scan_events_path, class: "btn btn-gradient", id: "event-index" %>
   </div>
 </div>
 
