--- a/app/views/shared/_track_card.html.erb
+++ b/app/views/shared/_track_card.html.erb
@@ -2,6 +2,7 @@
   <div class="row justify-content-center">
     <div class="col-12 col-lg-6">
     <div class="card-product">
+      <i class="fas fa-play" id="play-pause" data-sid="<%=locals[:track].spotify_id%>"></i>
       <% if locals[:track].artists.first.photo.attached? %>
       <%= cl_image_tag locals[:track].artists.first.photo.key, crop: :fill %>
       <% else %>
@@ -16,15 +17,14 @@
             <%= link_to "", star_track_path(track: locals[:track], event: locals[:event]), class: "fas fa-star non-color-star", :remote => true, method: :post  %>
           <% end %>
         <% end %>
-      </div>
-        <% locals[:track].artists.each do |artist| %>
-          <h2><%= artist.name  %></h2>
-        <% end %>
-        <h1><%= locals[:track].name %></h1>
-        <% unless locals[:likes].nil? %>
-          <p><em>Liked by <%= locals[:likes]  %> user(s)</em></p>
-        <% end %>
-
+        </div>
+          <% locals[:track].artists.each do |artist| %>
+            <h2><%= artist.name  %></h2>
+          <% end %>
+          <h1><%= locals[:track].name %></h1>
+          <% unless locals[:likes].nil? %>
+            <p><em>Liked by <%= locals[:likes]  %> user(s)</em></p>
+          <% end %>
         </div>
       </div>
     </div>
