--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -20,7 +20,7 @@
     </div>
     <% else %>
     <div class="col-12 col-lg-6">
-      <div class="card-product">
+      <div class="card-product-event">
         <p>No event found</p>
         <%= image_tag("artist.png") %>
       </div>
