--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -8,15 +8,19 @@
   align-items: center;
   margin-top: 10px;
   overflow: hidden;
+
 }
 
 
+
 .card-product img {
-  height: 141px;
-  width: 141px;
+  height: 100px;
+  width: 100px;
   object-fit: cover;
   transition: transform .8s, filter 0.5s ease-in-out;
   filter: grayscale(40%);
+
+
 }
 
 .card-product:hover img {
@@ -29,6 +33,7 @@ transform: scale(1.1);
   font-weight: bold;
   margin: 0;
   color: #E4C1F9;
+  overflow-wrap: break-word;
 }
 
 
@@ -37,8 +42,11 @@ transform: scale(1.1);
   color: #E4C1F9;
   line-height: 1.4;
   opacity: .7;
-  margin-bottom: 0;
-  margin-top: 8px;
+  // margin-bottom: 0;
+  // margin-top: 8px;
+  position: absolute;
+  bottom: 1px;
+  right: 5px;
 }
 
 .card-product .confirm-button {
@@ -70,6 +78,7 @@ transform: scale(1.1);
   flex-grow: 1;
   // margin-top: 5px;
 
+
 }
 
 .card-product .card-product-infos p {
@@ -79,6 +88,7 @@ transform: scale(1.1);
   opacity: .8;
   margin-bottom: 5px;
   margin-top: 8px;
+
 
 
 }
@@ -103,18 +113,195 @@ transform: scale(1.1);
 }
 
 .card-product .card-product-infos .star-card {
-  font-size: 36px;
-  position: absolute;
-  right: 8px;
-  bottom: 95px;
-  width: 84px;
+  font-size: 24px;
+  // position: absolute;
+  // right: 8px;
+  // bottom: 95px;
+  // width: 84px;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  position: absolute;
+  width: 40px;
+  right: 20px;
+  top: 60px;
 
 
 }
 
+.card-product  .play-button {
+  position: absolute;
+  width: 40px;
+  left: 40px;
+  top: 50px;
+  opacity: 1;
+  background-color: #734B6D;
+  opacity: .7;
+  border: none;
+  color: white;
+  height: 28px;
+  text-align: center;
+  text-decoration: none;
+  // display: inline-block;
+  font-size: 16px;
+  border-radius: 5%;
+
+
+}
+
+.card-product .music {
+  $bars: 10;
+
+  .container {
+      // margin: 100px auto 0;
+      width: #{$bars * 25}px;
+      height: 10px;
+      display: flex;
+      align-items: stretch;
+  }
+  .bar {
+      width: 5px;
+      min-height: 10px;
+      margin-right: 1px;
+      box-shadow: 0 10px 15px #000;
+  }
+
+  $multiplier: 100 / $bars;
+  @for $i from 0 through $bars {
+      .bar:nth-child(#{$i}) {
+          $saturation: 100 - (($i + 1) * $multiplier);
+          background-color: #E4C1F9;
+          opacity: .3;
+          animation: grow#{$i} #{random(700) + 1500}ms alternate infinite;
+      }
+
+      @keyframes grow#{$i} {
+          @for $j from 0 through 10 {
+              #{$j * 10}% {
+                  height: #{random(100)}px;
+              }
+          }
+      }
+  }
+  }
+
+
+
+.card-product-event {
+  // height: 200px;
+  // width: 100%;
+  background: black;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 10px;
+  overflow: hidden;
+}
+
+
+.card-product-event img {
+  height: 100px;
+  width: 100px;
+  object-fit: cover;
+  transition: transform .8s, filter 0.5s ease-in-out;
+  filter: grayscale(40%);
+}
+
+.card-product-event:hover img {
+filter: grayscale(0);
+transform: scale(1.1);
+}
+
+.card-product-event h2 {
+  font-size: 20px;
+  font-weight: bold;
+  margin: 0;
+  color: #E4C1F9;
+}
+
+
+.card-product-event p {
+  font-size: 12px;
+  color: #E4C1F9;
+  line-height: 1.4;
+  opacity: .7;
+  margin-bottom: 0;
+  margin-top: 4px;
+
+}
+
+.card-product-event .confirm-button {
+  position: absolute;
+  right: 15px;
+  bottom: 0px;
+  width: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #734B6D;
+  border: none;
+  color: white;
+  height: 28px;
+  text-align: center;
+  text-decoration: none;
+  // display: inline-block;
+  font-size: 16px;
+  border-radius: 5%;
+  transition-duration: 0.4s;
+  text-decoration: none;
+  // overflow: hidden;
+  cursor: pointer;
+
+}
+
+.card-product-event:hover .confirm-button {
+  background: #E4C1F9;
+  color: white;
+  transform: scale(1.1);
+  transition: transform .8s;
+
+}
+
+
+
+.card-product-event .card-product-event-infos {
+  padding-left: 16px;
+  flex-grow: 1;
+  // margin-top: 5px;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+
+
+}
+
+.card-product-event .card-product-event-infos p {
+  color: $white;
+  font-size: 12px;
+  line-height: 1.4;
+  opacity: .8;
+  // margin-bottom: 5px;
+  margin-top: 4px;
+
+
+}
+
+.card-product-event .card-product-event--infos h2 {
+  font-size: 18px;
+  font-weight: bold;
+  margin-top: 10px;
+  color: #E4C1F9;
+
+}
+
+.card-product-event .card-product-event-infos h1 {
+  font-size: 14px;
+  font-weight: bold;
+  color: $white;
+  line-height: 1.4;
+  opacity: .8;
+  margin-bottom: 5px;
+  margin-top: 4px;
+}
 
 
 body {
@@ -122,7 +309,7 @@ body {
 }
 
 .container p{
-  padding-left: 4px;
+  // padding-left: 4px;
 }
 
 // @media (min-device-width:600px) {
