--- a/app/views/events/_card.html.erb
+++ b/app/views/events/_card.html.erb
@@ -1,10 +1,10 @@
 
-<div class="card-product">
-  <div class="card-product-infos">
+<div class="card-product-event">
+  <div class="card-product-event-infos">
     <h2><%= event.venue %></h2>
-    <h1><%= event.address %></h1>
-    <p><%= event.artist %></p>
-    <p><%= "#{(event.distance_to([params[:lat], params[:lon]])).round(1)}km" %></p>
+    <p><%= event.address %></p>
+    <h1><%= event.artist %></h1>
+    <p><em><%= "#{(event.distance_to([params[:lat], params[:lon]])).round(1)}km" %></em></p>
   </div>
   <% if event.photo.attached? %>
     <%= cl_image_tag event.photo.key, crop: :fill %>
