--- a/app/views/pages/library.html.erb
+++ b/app/views/pages/library.html.erb
@@ -40,7 +40,7 @@
   </div>
 
   <% @tracks.each do |track| %>
-    <%= render "shared/track_card", locals: { track: track } %>
+    <%= render "shared/library", locals: { track: track } %>
   <% end %>
 </div>
 
