revision of seed, geolocation, etc

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -110,6 +110,7 @@ transform: scale(1.1);
   opacity: .8;
   margin-bottom: 5px;
   margin-top: 8px;
+  display: inline-block;
 }
 
 .card-product .card-product-infos .star-card {
