--- a/app/views/shared/_track_card.html.erb
+++ b/app/views/shared/_track_card.html.erb
@@ -6,7 +6,7 @@
       <% if locals[:track].artists.first.photo.attached? %>
       <%= cl_image_tag locals[:track].artists.first.photo.key, crop: :fill %>
       <% else %>
-      <%= image_tag "plug_logo.png" %>
+      <%= image_tag "sample.png" %>
       <% end %>
 
     <div class="card-product-infos">
@@ -44,7 +44,7 @@
         <% locals[:track].artists.each do |artist| %>
           <h1><%= artist.name  %></h1>
         <% end %>
-
+        <h2><%= locals[:track].album %></h2>
         <% unless locals[:likes].nil? %>
           <p><em>Liked by <%= locals[:likes]  %> user(s)</em></p>
         <% end %>
