--- a/app/views/shared/_library.html.erb
+++ b/app/views/shared/_library.html.erb
@@ -14,7 +14,7 @@
     <% if locals[:track].artists.first.photo.attached? %>
     <%= cl_image_tag locals[:track].artists.first.photo.key, crop: :fill %>
     <% else %>
-    <%= image_tag "sample.png" %>
+    <%= image_tag "sample_1.png" %>
     <% end %>
 
 </div>
