--- a/app/views/shared/_track_card.html.erb
+++ b/app/views/shared/_track_card.html.erb
@@ -6,7 +6,7 @@
       <% if locals[:track].artists.first.photo.attached? %>
       <%= cl_image_tag locals[:track].artists.first.photo.key, crop: :fill %>
       <% else %>
-      <%= image_tag "sample.png" %>
+      <%= image_tag "sample_1.png" %>
       <% end %>
 
     <div class="card-product-infos">
