--- a/app/views/pages/library.html.erb
+++ b/app/views/pages/library.html.erb
@@ -1,50 +1,127 @@
 
-  <div class="cta">
-     <h2>Export your customized playlist to Spotify</h2>
-     <!-- s -->
-  </div>
-<div class="container">
-  <div class="row justify-content-center">
-    <div class="col-12 col-lg-6">
-    <%= form_for :playlist, as: :get, url: export_path, method: :get, html: { class: "new_post", id: "new_post" } do |f| %>
-      <div class="form-group">
-        <%= f.text_field :name, class: 'form-control', placeholder: "Enter your playlist name" %>
-        <%= f.submit class: 'btn btn-gradient' %>
+<div class="cta">
+   <h2>Check out recommended events</h2>
+
+</div>
+
+<section class="carousel slide" data-ride="carousel" id="postsCarousel">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="container p-t-0 m-t-2 carousel-inner">
+          <div class="row row-equal carousel-item active m-t-0">
+              <div class="col-md-4">
+                  <div class="card">
+                      <div class="card-img-top card-img-top-250">
+                          <img class="img-fluid" src="https://images.unsplash.com/photo-1546707012-0c9f63ba29b9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80" alt="Carousel 1">
+                      </div>
+                      <div class="card-block p-t-2">
+                          <h6 class="small text-wide p-b-2"></h6>
+                          <h2>
+
+                          </h2>
+
+                      </div>
+                  </div>
+              </div>
+
+          </div>
+
+          <div class="row row-equal carousel-item m-t-0">
+              <div class="col-md-4">
+                  <div class="card">
+                      <div class="card-img-top card-img-top-250">
+                          <img class="img-fluid" src="https://images.unsplash.com/photo-1516450360452-9312f5e86fc7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80" alt="Carousel 4">
+                      </div>
+                      <div class="card-block p-t-2">
+
+                          <h2>
+
+                          </h2>
+                      </div>
+                  </div>
+              </div>
+        </div>
+
+        <div class="row row-equal carousel-item m-t-0">
+              <div class="col-md-4">
+                  <div class="card">
+                      <div class="card-img-top card-img-top-250">
+                          <img class="img-fluid" src="https://images.unsplash.com/photo-1550184658-ff6132a71714?ixlib=rb-1.2.1&auto=format&fit=crop&w=1580&q=80" alt="Carousel 4">
+                      </div>
+                      <div class="card-block p-t-2">
+
+                          <h2>
+
+                          </h2>
+                      </div>
+                  </div>
+              </div>
+        </div>
       </div>
-      <% end %>
+    </div>
+  </div>
+</section>
+
+ <script>
+      (function($) {
+    "use strict";
+
+    // manual carousel controls
+    $('.next').click(function(){ $('.carousel').carousel('next');return false; });
+    $('.prev').click(function(){ $('.carousel').carousel('prev');return false; });
+
+})(jQuery);
+</script>
+
+<!-- <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="https://images.unsplash.com/photo-1499364615650-ec38552f4f34?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1566&q=80" alt="First slide">
+      <div class="carousel-caption d-block d-md-block">
+        <h5>The Room</h5>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://images.unsplash.com/photo-1514525253161-7a46d19cd819?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1567&q=80" alt="Second slide">
+      <div class="carousel-caption d-block d-md-block">
+        <h5>Goldlink</h5>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://images.unsplash.com/photo-1546707012-0c9f63ba29b9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1568&q=80" alt="Third slide">
+      <div class="carousel-caption d-block d-md-block">
+        <h5>Sel Octagon Tokyo</h5>
+      </div>
     </div>
   </div>
 </div>
-
-<div class="container">
- <% @tracks.each do |track| %>
-    <%= render "shared/library", locals: { track: track } %>
-  <% end %>
-</div>
-
-  <!-- <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="d-block w-100" src="https://images.unsplash.com/photo-1499364615650-ec38552f4f34?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1566&q=80" alt="First slide">
-        <div class="carousel-caption d-block d-md-block">
-          <h5>The Room</h5>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="https://images.unsplash.com/photo-1514525253161-7a46d19cd819?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1567&q=80" alt="Second slide">
-        <div class="carousel-caption d-block d-md-block">
-          <h5>Goldlink</h5>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="https://images.unsplash.com/photo-1507676184212-d03ab07a01bf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80" alt="Third slide">
-        <div class="carousel-caption d-block d-md-block">
-          <h5>Sel Octagon Tokyo</h5>
-        </div>
-      </div>
-    </div>
-  </div>
  -->
+
+
+<div class="cta">
+   <h2>Export your customized playlist to Spotify</h2>
+   <!-- s -->
+</div>
+<div class="container">
+<div class="row justify-content-center">
+  <div class="col-12 col-lg-6">
+  <%= form_for :playlist, as: :get, url: export_path, method: :get, html: { class: "new_post", id: "new_post" } do |f| %>
+    <div class="form-group">
+      <%= f.text_field :name, class: 'form-control', placeholder: "Enter your playlist name" %>
+      <%= f.submit class: 'btn btn-gradient' %>
+    </div>
+    <% end %>
+  </div>
+</div>
+</div>
+
+<div class="container">
+<% @tracks.each do |track| %>
+  <%= render "shared/library", locals: { track: track } %>
+<% end %>
+</div>
+
+
 
 
 
