--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,7 +1,7 @@
 
 <div class="cta">
   <h2><%= "People at #{@event.artist} concert at #{@event.venue} like tracks below"%></h2>
-  <p>Star a song you'd like to add to your playlist</p>
+  <p>Star a NEW song you'd like to add to your playlist</p>
   <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.pexels.com/photos/1763075/pexels-photo-1763075.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260)">
     <h1> <%=@event.venue %></h1>
     <p><%= "#{@event.users.count} people checked in" %></p>
