--- a/app/views/pages/library.html.erb
+++ b/app/views/pages/library.html.erb
@@ -8,8 +8,9 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="container  carousel-inner">
-        <% @recommended_events.each do |event| %>
-          <div class="row row-equal carousel-item m-t-0 active">
+        <% @recommended_events.each_with_index do |event, index| %>
+          <div class="row row-equal carousel-item m-t-0 <%= index == 0 ? 'active' : '' %>">
+              <% raise %>
               <div class="col-md-4">
                   <div class="card">
                       <%= render "pages/caroussel", event: event %>
