distance showing now

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -10,7 +10,7 @@
 
 <div class="container">
  <div class="row justify-content-center">
-    <%= link_to "Go to library", library_path, class: "btn btn-gradient" %>
+    <%= link_to "Go to library", library_path, class: "btn btn-gradient", id: 'event-index' %>
   </div>
 </div>
 
