--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,7 +12,7 @@
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
       <li class="nav-item active">
-        <%= link_to "Library",library_path, class: "nav-link" %>
+        <%= link_to "Library",library_path, class: "nav-link", id: 'event-index' %>
       </li>
       <li class="nav-item">
         <%= link_to "Events", events_path, class: "nav-link", id: "event-index" %>
