edited event card

--- a/app/assets/stylesheets/components/_cta.scss
+++ b/app/assets/stylesheets/components/_cta.scss
@@ -1,4 +1,4 @@
-p {
+.cta p {
   font-size: 16px;
   margin-left: 25px;
   margin-right: 20px;
@@ -9,7 +9,7 @@ p {
 
 
 
-h2 {
+.cta h2 {
   font-size: 24px;
   font-weight: bold;
   margin-top: 20px;
@@ -20,7 +20,7 @@ h2 {
 
 }
 
-h1 {
+.cta h1 {
   font-size: 36px;
   font-weight: bold;
   margin-top: 20px;
