--- a/app/views/pages/_caroussel.html.erb
+++ b/app/views/pages/_caroussel.html.erb
@@ -7,11 +7,11 @@
 </div>
 
 
- <div class="container card-caroussel" class="small text-wide">
+ <div class="card-caroussel" class="small text-wide">
     <h1><%= event.genre %></h1>
-    <h2><%= event.venue %></h2>
-    <p><%= event.address %></p>
-    <p><%= event.artist %></p>
-    <p><%= "#{(event.distance_to([params[:lat], params[:lon]])).round(1)}km" %></p>
+    <h3><%= event.venue %></h3>
+    <h4><%= event.address %></h4>
+    <h2><%= event.artist %></h2>
+    <em><p><%= "#{(event.distance_to([params[:lat], params[:lon]])).round(1)}km" %></p></em>
   </div>
 
