--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -18,7 +18,7 @@ padding: 350px 0;
 }
 
 
-.container h1 {
+.home h1 {
   margin: 0;
   margin-bottom: 10px;
   color: white;
@@ -29,7 +29,7 @@ padding: 350px 0;
 }
 
 
-.container p {
+.home p {
   margin-left: 0;
   margin-bottom: 8px;
   font-size: 18px;
