--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,11 @@
 <div class="home-video-wrapper">
   <%= video_tag "concert.mp4", autoplay: "", loop: "", muted: "", playsinline: '', class: 'home_video' %>
   <div class="container">
+    <div class="home">
     <h1><strong>PLUG</strong></h1>
     <p>Take a peek at others' music while enjoying a concert</p>
     <p>Create your next playlist in a heartbeat!</p>
+    </div>
     <%= link_to "See events", scan_events_path, class: "btn btn-gradient", id: "event-index" %>
   </div>
 </div>
