--- a/app/views/pages/scan_events.html.erb
+++ b/app/views/pages/scan_events.html.erb
@@ -1,5 +1,6 @@
-
-<h2 class="cta">Scanning for near-by music events</h2>
+<div class="cta">
+<h2 >Scanning for near-by music events</h2>
+</div>
 <div class="logo">
 </div>
 <div class="outer-circle"></div>
