--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,30 +1,39 @@
 
-  <div class="cta">
-    <h2>See the events around you to check in</h2>
-    <p>Connect with people at the event and share your music</p>
-  </div>
-
-  <div class="container">
-    <% if @main_event.nil? == false %>
-    <div class="row">
-      <div class="col-12 col-lg-6">
-        <%= render "events/card", event: @main_event %>
-      </div>
+<div class="cta">
+  <h2>Connect with people at the event and share your music</h2>
+  <p><%="You are at #{@main_event.artist} concert"%></p>
+</div>
 
 
-      <% @sub_events.each do |sub_event| %>
-          <div class="col-12 col-lg-6">
-            <%= render "events/card", event: sub_event %>
-          </div>
-      <% end %>
-    </div>
-    <% else %>
+
+<div class="container" >
+  <% if @main_event.nil? == false %>
+  <div class="row">
     <div class="col-12 col-lg-6">
-      <div class="card-product-event">
-        <p>No event found</p>
-        <%= image_tag("artist.png") %>
-      </div>
+      <%= render "events/card", event: @main_event %>
     </div>
-    <% end %>
   </div>
 </div>
+
+<div class="cta">
+  <p><%="Other events close to you"%></p>
+</div>
+<div class="container" >
+  <div class="row">
+    <div class="col-12 col-lg-6">
+      <% @sub_events.each do |sub_event| %>
+      <%= render "events/card", event: sub_event %>
+      <% end %>
+    </div>
+  </div>
+</div>
+<% else %>
+<div class="col-12 col-lg-6">
+  <div class="card-product-event">
+    <p>No event found</p>
+    <%= image_tag("artist.png") %>
+  </div>
+</div>
+<% end %>
+
+
