--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,16 +1,15 @@
 
 <div class="cta">
-  <h2><%= "People at #{@event.artist} concert at #{@event.venue} like tracks below"%></h2>
-  <p>Star a NEW song you'd like to add to your playlist</p>
   <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.pexels.com/photos/1763075/pexels-photo-1763075.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260)">
     <h1> <%=@event.venue %></h1>
-    <p><%= "#{@event.users.count} people checked in" %></p>
+    <p align="center"><%= "#{@event.users.count} people at #{@event.artist} concert at #{@event.venue} like tracks below in Spotify"%></p>
   </div>
+  <!-- <h2 align="center">Add a new track to your library</h2> -->
 </div>
 
 <div class="container">
  <div class="row justify-content-center">
-    <%= link_to "Go to library", library_path, class: "btn btn-gradient", id: 'event-index' %>
+    <%= link_to "Add tracks", library_path, class: "btn btn-gradient", id: 'event-index' %>
   </div>
 </div>
 
