--- a/app/assets/stylesheets/components/_cta.scss
+++ b/app/assets/stylesheets/components/_cta.scss
@@ -1,8 +1,9 @@
 p {
   font-size: 16px;
-  margin-left: 25px;
+  margin-top: 8px;
+  margin-left: 20px;
   margin-right: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 0px;
   color: $gray;
 
 }
