--- a/app/views/pages/scan_events.html.erb
+++ b/app/views/pages/scan_events.html.erb
@@ -1,5 +1,5 @@
 
-<h2 class="cta">Scanning for near-by music events</h2>
+<h2 class="cta" align="center">Scanning your location and importing your Spotify playlists</h2>
 <div class="logo">
 </div>
 <div class="outer-circle"></div>
